[tool.poetry]
name = "Test"
version = "0.1.0"
description = ""
authors = ["sanjayjaja <94111356+sanjayjaja@users.noreply.github.com>"]

[tool.poetry.group.dev.dependencies]
python = ">=3.9"

[tool.poetry.dev-dependencies]
python = ">=3.9"

[tool.poetry.dependencies]
python = ">=3.9"
pytz = "2024.2"
requests = "2.32.3"
discord-py = "2.4.0"
python-dotenv = "1.0.1"
[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
